# kbd-trainer

./: .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE  LICENSE.rtf  PACKAGING.md  README.md  VERSIONING.md  build-overlay.bat  setup.bat  wix_patch.xml
.github/workflows/: README.md  build-and-release.yml  cmake-single-platform.yml  test-build.yml
build-overlay/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  KBDTrainer.sln  KBDTrainer.vcxproj  KBDTrainer.vcxproj.filters  KBDTrainerInjector.vcxproj  KBDTrainerInjector.vcxproj.filters  KBDTrainerOverlay.vcxproj  KBDTrainerOverlay.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-overlay/KBDTrainer.dir/Release/: KBDTrainer.exe.recipe
build-overlay/KBDTrainer.dir/Release/KBDTrainer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-overlay/KBDTrainerInjector.dir/Release/: KBDTrainerInjector.exe.recipe
build-overlay/KBDTrainerInjector.dir/Release/KBDTrain.0E6CD12D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-overlay/KBDTrainerOverlay.dir/Release/: KBDTrainerOverlay.dll.recipe
build-overlay/KBDTrainerOverlay.dir/Release/KBDTrain.7B4A01B3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-overlay/SDL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SDL3-shared.vcxproj  SDL3-shared.vcxproj.filters  SDL3.sln  SDL3ConfigVersion.cmake  SDL3_test.vcxproj  SDL3_test.vcxproj.filters  SDL3headersTargets.cmake  SDL3sharedTargets.cmake  SDL3testTargets.cmake  SDL_uclibc.vcxproj  SDL_uclibc.vcxproj.filters  cmake_install.cmake
build-overlay/SDL/Release/: SDL3.exp  SDL_uclibc.lib
build-overlay/SDL/SDL3-shared.dir/Release/: SDL3.dll.recipe  version.res
build-overlay/SDL/SDL3-shared.dir/Release/SDL3-shared.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  SDL3-shared.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
build-overlay/SDL/SDL_uclibc.dir/Release/SDL_uclibc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-overlay/SDL/include-revision/SDL3/: SDL_revision.h
build-overlay/SDL_image/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SDL3_image-shared.vcxproj  SDL3_image-shared.vcxproj.filters  SDL3_image.sln  cmake_install.cmake
build-overlay/SDL_image/Release/: SDL3_image.exp  SDL3_image.lib
build-overlay/SDL_image/SDL3_image-shared.dir/Release/: SDL3_image.dll.recipe  version.res
build-overlay/SDL_image/SDL3_image-shared.dir/Release/SDL3_ima.F8D4282B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  SDL3_image-shared.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
build-overlay/SDL_ttf/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SDL3_ttf-shared.vcxproj  SDL3_ttf-shared.vcxproj.filters  SDL3_ttf.sln  cmake_install.cmake
build-overlay/SDL_ttf/Release/: SDL3_ttf.exp
build-overlay/SDL_ttf/SDL3_ttf-shared.dir/Release/: SDL3_ttf.dll.recipe  version.res
build-overlay/SDL_ttf/SDL3_ttf-shared.dir/Release/SDL3_ttf-shared.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  SDL3_ttf-shared.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
build-overlay/minhook/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  minhook.sln  minhook.vcxproj  minhook.vcxproj.filters
build-overlay/minhook/Release/: minhook.x64.exp  minhook.x64.lib
build-overlay/minhook/minhook.dir/Release/: minhook.x64.dll.recipe
build-overlay/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
include/: game.h  input.h  overlay.h
jets-brain-wire-helper/: build.bat
jets-brain-wire-helper/include/core/: player.h  plug.h  slot.h  timing.h
jets-brain-wire-helper/include/game/: game_engine.h
jets-brain-wire-helper/include/input/: device_info.h  input_device.h  input_mapping.h  standard_input.h
jets-brain-wire-helper/src/core/: player_conversion.c  plug_manager.c  slot_manager.c  timing_system.c
jets-brain-wire-helper/src/game/: game_engine.c  main_application.c
jets-brain-wire-helper/src/input/: device_info.c  generic_gamepad.c  input_device.c  input_mapper.c  keyboard_device.c  ps5_device.c  standard_input.c  xbox_device.c
src/: dx11_hook.cpp  game.c  injector.c  main.c  overlay.c  overlay.cpp  render.c
web/: ENHANCEMENT_SUMMARY.md  README.md  app.js  game-engine.js  index.html  input-handler.js  styles.css  test-mobile.html  ui-controller.js
web-app/: .gitignore  README.md  demo.html  index.html  package-lock.json  package.json  vite.config.js
web-app/src/: App.jsx  gameData.js  index.css
web-app/src/components/: ModeSelector.jsx  PatternDisplay.jsx  ScoreBoard.jsx  StatusBar.jsx
web-app/src/hooks/: useGamepad.js
(+19 files in other folders)
